--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@vitejs/plugin-react": "^2.1.0",
+    "bootstrap": "^5.2.2",
     "sass": "^1.55.0",
     "vite": "^3.1.8",
     "vite-plugin-env-compatible": "^1.1.1",
